Update Docker image references in GitHub Actions workflows

--- a/.github/workflows/release-on-tag.yml
+++ b/.github/workflows/release-on-tag.yml
@@ -15,7 +15,7 @@ jobs:
       attestations: write
     env:
         REGISTRY: ghcr.io
-        IMAGE_NAME: ${{ github.repository }}
+        IMAGE_NAME: openchai/aria2-initrd
 
     steps:
       - name: Checkout repository
