--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,6 +7,11 @@ on:
 
 jobs:
   build-and-push:
+    permissions:
+        id-token: write
+        packages: write
+        contents: read
+        attestations: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
